--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "webpack-learing",
   "version": "1.0.0",
+  "main": "./dist/main.pro.js",
   "description": "",
   "scripts": {
-    "start": "webpack --mode production --colors --display-reasons",
-    "dev": "webpack --mode development --colors --display-reasons"
+    "start": "webpack --mode production --colors --display-reasons && npm run build-electron-main && electron .",
+    "build-electron-main": "webpack --mode production --config webpack.config.main.js --colors --display-reasons",
+    "dev": "webpack --mode development --colors --display-reasons && electron ."
   },
   "author": "chensiyuan",
   "license": "ISC",
@@ -15,12 +17,14 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
+    "electron": "^4.0.2",
     "html-loader": "^0.5.5",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.0",
-    "webpack-cli": "^3.2.1"
+    "webpack-cli": "^3.2.1",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5"
